crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__plugins__banktransfer__templatetags__commadecimal.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::commadecimal":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.plugins.banktransfer.templatetags.commadecimal::filter::commadecimal": no_argument
block_specs: {}
