crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__plugins__banktransfer__templatetags__dotdecimal.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::dotdecimal":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.plugins.banktransfer.templatetags.dotdecimal::filter::dotdecimal": no_argument
block_specs: {}
